syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "AiSyncInfo.proto";

// CmdId: 343
// EnetChannelId: 0
// EnetIsReliable: true
// IsAllowClient: true
message EntityAiSyncNotify {
	repeated AiSyncInfo info_list = 1;
	repeated uint32 local_avatar_alerted_monster_list = 10;
}
