syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

message InBattleMechanicusMonsterInfo {
	uint32 monster_id = 1;
	uint32 count = 2;
	uint32 level = 3;
}
